@@ -1,10 +1,11 @@
 WeeChat - Wee Enhanced Environment for Chat
 ===========================================
 
-ChangeLog - 2007-03-16
+ChangeLog - 2007-03-20
 
 
 Version 0.2.4 (under dev!):
+   * fixed bug with explode_string / free_exploded_string when max_items > 0
    * added new key (ctrl-R) for interactive and incremental search in buffer
      history (task #6628)
    * fixed /topic completion when no topic set on current channel (bug #19322)
